[ticket-207] header fix align and hover color

--- a/page-editor/src/components/ProjectViewer/Header/Header.sass
+++ b/page-editor/src/components/ProjectViewer/Header/Header.sass
@@ -1,34 +1,37 @@
 #header
-    display: flex;
-    flex: 0 0 27px;
-    background-color: rgb(243,243,243);
-    border-bottom: 1px solid rgb(204, 204, 204);
+    display: flex
+    flex: 0 0 27px
+    background-color: rgb(243,243,243)
+    border-bottom: 1px solid rgb(204, 204, 204)
 
 .header-tab
-    float: left;
-    padding: 2px 0.8em;
-    height: 26px;
-    line-height: 15px;
-    white-space: nowrap;
-    cursor: default;
-    display: flex;
-    align-items: center;
-    color: #5a5a5a;
+    float: left
+    padding: 2px 0.8em
+    height: 26px
+    line-height: 15px
+    white-space: nowrap
+    cursor: default
+    display: flex
+    align-items: baseline
+    color: #5a5a5a
     cursor: pointer
 
+.header-tab:hover
+    background-color: #EAEAEA
+
 .header-tab.selected
-    border-bottom: 2px solid rgb(26,115,232);
+    border-bottom: 2px solid rgb(26,115,232)
 
 .header-tab .close-icon
-    width: 8px;
-    height: 8px;
-    background-color: red;
-    display: inline-block;
+    width: 8px
+    height: 8px
+    background-color: red
+    display: inline-block
 
 .header-tab .close-icon:hover
-    background-color: green;
-        
+    background-color: green
+
 .go-back-icon
-    cursor: pointer;
-    margin-top: 2px;
-    margin-left: 4px;
+    cursor: pointer
+    margin-top: 2px
+    margin-left: 4px
